--- a/css/style.css
+++ b/css/style.css
@@ -95,15 +95,44 @@ body {
   display: flex;
 }
 .serv {
-  width: calc(100 / 3);
+  width: 345px;
   text-align: center;
   margin-bottom: 104px;
 }
+.serv:not(:last-child) {
+  margin-right: 45px;
+}
 .link {
+  display: block;
+  height: 90px;
+  weight: 90px;
   border: 1px solid #dddddd;
   border-radius: 50px;
-  padding: 20px;
-  color: #c0301c;
   font-family: "Montserrat", sans-serif;
   font-size: 44px;
+  margin-bottom: 55px;
+}
+a.active {
+  background: #c0301c;
+}
+.support {
+  width: 48px;
+  height: 49px;
+}
+.code {
+  weight: 53px;
+  height: 40px;
+}
+.font {
+  height: 40px;
+  weight: 43px;
+}
+.serv h3 {
+  margin-top: 0;
+  color: #555555;
+  text-transform: uppercase;
+}
+serv p {
+  margin-top: 0;
+  color: #555555;
 }
